# bedrock-rag-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample_docs/: readme.txt
scripts/: ingest_local_docs.py
src/: app.py  bedrock.py  db.py  ingest.py  rag.py  schemas.py  settings.py
src/utils/: chunking.py
tests/: test_chunking.py
