[project]
name = "bedrock-rag-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "boto3>=1.34",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2.5",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
